--- a/style.css
+++ b/style.css
@@ -25,9 +25,12 @@
   background-color: red;
 }
 
-.side-menu__top{}
-.side-menu__middle{}
-.side-menu__bottom{}
+.side-menu__top {
+}
+.side-menu__middle {
+}
+.side-menu__bottom {
+}
 
 .taskview {
   display: flex;
@@ -38,23 +41,35 @@
   padding: 10px;
 }
 
-.taskview__name{
-    font-size: 3rem;
-    margin-bottom: 2rem;
+.taskview__name {
+  font-size: 3rem;
+  margin-bottom: 2rem;
 }
 
 /*Task Bar*/
 
 .taskbar {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: flex-end;
+  
+    width: 50%;
+    margin-bottom: 10px;
+  }  
+
+.taskbar__content {
+  position: relative;
   display: grid;
   grid-template-columns: 30px 1fr 30px;
   grid-template-rows: 30px auto 30px;
   row-gap: 5px;
-  grid-template-areas: "checkbox top priority" ". middle ." ". bottom trashbin";
+  grid-template-areas:
+    "checkbox top priority"
+    ". middle ."
+    ". bottom bottom";
 
-  width: 50%;
+  flex: 1;
   border: 1px solid blue;
-  margin-bottom: 10px;
 }
 
 .taskbar__checkbox {
@@ -81,22 +96,21 @@
 }
 
 .taskbar__folder {
-    display: flex;
-    justify-content: flex-end;
+  display: flex;
+  justify-content: flex-end;
 
-    width: 30%;
+  width: 30%;
 }
 .taskbar__folder-link {
-    color: black;
+  color: black;
   text-decoration: none;
   font-size: 1.5rem;
 }
 
 .taskbar__descript {
-    display: flex;
+  display: flex;
   align-items: center;
   grid-area: middle;
-  
 
   padding: 0 5px;
   /* border: 1px solid; */
@@ -131,34 +145,34 @@
 }
 
 .taskbar__date {
-
 }
 .taskbar__date-link {
-    color: black;
+  color: black;
   text-decoration: none;
   font-size: 1.5rem;
 }
 .taskbar__tagsection {
-    display: flex;
-    flex-flow: row nowrap;
+  display: flex;
+  flex-flow: row nowrap;
 }
 .taskbar__tag {
-    font-size: 1.5rem;
-    margin-left: 5px;
+  font-size: 1.5rem;
+  margin-left: 5px;
 }
-
-
 
 .taskbar__trashbin {
   display: flex;
   justify-content: center;
   align-items: center;
 
-  grid-area: trashbin;
-
-  /* border: 1px solid black; */
+  margin-left: 2px;
   font-size: 1.6rem;
-  color: rgb(55, 54, 54);
+  color: rgba(55, 54, 54, 0.218);
+  transition: color 0.5s;
+}
+
+.taskbar__trashbin:hover {
+  color: black;
 }
 
 .footer {
