--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+:root {
+  --yellow: yellow;
+}
+
 .body-container {
   display: flex;
   flex-flow: column nowrap;
@@ -6,33 +10,24 @@
 }
 
 .header {
-  height: 4rem;
+  min-height: 4rem;
   background-color: aliceblue;
 }
 
-.main-container {
-  position: relative;
+.header__create-task-button {
+  padding: 3px 8px;
+  font-size: 1.5rem;
+}
 
+.main-container {
   display: flex;
   flex-flow: row nowrap;
 
   flex: 1;
 }
 
-.side-menu {
-  width: 10rem;
-
-  background-color: red;
-}
-
-.side-menu__top {
-}
-.side-menu__middle {
-}
-.side-menu__bottom {
-}
-
 .taskview {
+  position: relative;
   display: flex;
   align-items: center;
   flex-flow: column;
@@ -49,13 +44,13 @@
 /*Task Bar*/
 
 .taskbar {
-    display: flex;
-    flex-flow: row nowrap;
-    align-items: flex-end;
-  
-    width: 50%;
-    margin-bottom: 10px;
-  }  
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: flex-end;
+
+  width: 50%;
+  margin-bottom: 10px;
+}
 
 .taskbar__content {
   position: relative;
@@ -107,6 +102,31 @@
   font-size: 1.5rem;
 }
 
+.taskbar__folder-link--red {
+  color: red;
+}
+.taskbar__folder-link--yellow {
+  color: yellow;
+}
+.taskbar__folder-link--green {
+  color: green;
+}
+.taskbar__folder-link--blue {
+  color: blue;
+}
+.taskbar__folder-link--purple {
+  color: purple;
+}
+.taskbar__folder-link--black {
+  color: black;
+}
+.taskbar__folder-link--orange {
+  color: orange;
+}
+.taskbar__folder-link--pink {
+  color: pink;
+}
+
 .taskbar__descript {
   display: flex;
   align-items: center;
@@ -122,6 +142,7 @@
 }
 
 .taskbar__priority {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -145,19 +166,47 @@
 }
 
 .taskbar__date {
+  position: relative;
 }
 .taskbar__date-link {
   color: black;
   text-decoration: none;
   font-size: 1.5rem;
 }
+
 .taskbar__tagsection {
+  position: relative;
   display: flex;
   flex-flow: row nowrap;
 }
 .taskbar__tag {
-  font-size: 1.5rem;
+  font-size: 1rem;
   margin-left: 5px;
+}
+
+.taskbar__tag--red {
+  color: red;
+}
+.taskbar__tag--blue {
+  color: blue;
+}
+.taskbar__tag--yellow {
+  color: yellow;
+}
+.taskbar__tag--green {
+  color: green;
+}
+.taskbar__tag--pink {
+  color: pink;
+}
+.taskbar__tag--orange {
+  color: orange;
+}
+.taskbar__tag--black {
+  color: black;
+}
+.taskbar__tag--purple {
+  color: purple;
 }
 
 .taskbar__trashbin {
@@ -178,4 +227,605 @@
 .footer {
   height: 3rem;
   background-color: aliceblue;
+}
+
+/*Side Menu*/
+
+.side-menu {
+  display: flex;
+  flex-flow: column;
+
+  background-color: rgb(238, 238, 238);
+  width: 12rem;
+
+  font-size: 1.5rem;
+}
+
+.side-menu__top,
+.side-menu__middle,
+.side-menu__bottom {
+  margin: 2rem 0;
+  margin-left: 2rem;
+}
+
+.side-menu__top {
+}
+
+.side-menu__middle {
+  position: relative;
+}
+
+.side-menu__bottom {
+  height: 10rem;
+  overflow: auto;
+}
+
+.side-menu__folder,
+.side-menu__option {
+  margin: 8px 0;
+}
+
+.side-menu__folder {
+  list-style: inside disc;
+}
+
+.side-menu__folder--today::marker {
+  content: "\1F4C5";
+}
+
+.side-menu__folder--inbox::marker {
+  content: "\1F4E5";
+}
+
+.side-menu__folder--upcoming::marker {
+  content: "\1F5D3";
+}
+
+.side-menu__folder--home::marker {
+  color: blue;
+}
+
+.side-menu__folder--work::marker {
+  color: yellow;
+}
+
+/*Task Create Modal*/
+
+.task-create {
+}
+
+.task-create::backdrop {
+  background-color: transparent;
+}
+
+.task-create__form {
+  display: flex;
+  flex-flow: column nowrap;
+
+  /* height: 100%; */
+  width: 40vw;
+  padding: 1rem;
+}
+.task-create__top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 0.5rem;
+}
+.task-create__name-label {
+  font-size: 1.2rem;
+}
+.task-create__cancel-button {
+  border-radius: 50%;
+  height: 1.2rem;
+  width: 1.2rem;
+  font-size: 0.7rem;
+  text-align: center;
+  padding: 0;
+}
+.task-create__name {
+  font-size: 1.2rem;
+  padding: 5px;
+  margin-bottom: 0.5rem;
+}
+.task-create__descript-label {
+  font-size: 1.2rem;
+  margin-bottom: 0.5rem;
+}
+.task-create__descript {
+  font-size: 1.2rem;
+  padding: 5px;
+  margin-bottom: 0.5rem;
+}
+.task-create__bottom {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 1.5rem auto;
+  row-gap: 0.1rem;
+  margin-bottom: 1.5rem;
+}
+.task-create__date-label {
+  color: black;
+  font-size: 1rem;
+}
+
+.task-create__date {
+  border: none;
+  text-align: left;
+  font-size: .9rem;
+  width: fit-content;
+  cursor: pointer;
+}
+
+.task-create__date:hover{
+  background-color: yellow;
+}
+
+.task-create__date-container {
+  display: grid;
+  display: none;
+  grid-template-columns: 1fr 1fr;
+  justify-items: center;
+  align-items: center;
+
+  height: 7rem;
+  width: 30vw;
+}
+
+.task-create__date-container__date-label {
+  font-size: 1.5rem;
+}
+.task-create__date-container__date-input {
+}
+
+.task-create__date-container__time-label {
+  font-size: 1.5rem;
+}
+
+.task-create__date-container__time-input {
+}
+
+.task-create__tag-label {
+  color: black;
+  font-size: 1rem;
+}
+
+.task-create__tagcontainer {
+  position: relative;
+  cursor: pointer;
+  width: fit-content;
+}
+
+.task-create__tagcontainer:hover{
+  outline: solid;
+}
+
+.task-create__tag {
+  vertical-align: sub;
+}
+
+.task-create__taglist-container {
+  position: absolute;
+  top: 0rem;
+  right: 63px;
+  width: 10rem;
+  min-height: 3rem;
+  padding: 4px;
+  padding-top: 0.8rem;
+  border: 1px solid;
+  background-color: white;
+  border-radius: 6px;
+}
+
+.task-create__taglist-container--hidden {
+  display: none;
+}
+
+.task-create__taglist {
+}
+
+.task-create__tag-listitem {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  padding-left: 1.5rem;
+}
+
+.task-create__tag-listitem--red::before {
+  background-color: red;
+}
+.task-create__tag-listitem--blue::before {
+  background-color: blue;
+}
+.task-create__tag-listitem--green::before {
+  background-color: green;
+}
+.task-create__tag-listitem--yellow::before {
+  background-color: yellow;
+}
+.task-create__tag-listitem--orange::before {
+  background-color: orange;
+}
+.task-create__tag-listitem--pink::before {
+  background-color: pink;
+}
+.task-create__tag-listitem--purple::before {
+  background-color: purple;
+}
+.task-create__tag-listitem--black::before {
+  background-color: black;
+}
+
+.task-create__tag-listitem::before {
+  position: absolute;
+  content: "";
+  width: 1rem;
+  height: 1rem;
+  left: 0px;
+}
+
+.task-create__tagname {
+}
+.task-create__tag-checkbox {
+}
+
+.task-create__priority-label {
+  color: black;
+  font-size: 1rem;
+}
+
+.task-create__priority {
+}
+.task-create__priority-selection {
+  width: 3rem;
+  height: 1.6rem;
+  font-size: 1rem;
+}
+.task-create__priorityoption {
+}
+.task-create__folder-label {
+  color: black;
+  font-size: 1rem;
+}
+
+.task-create__folder-selection {
+  width: 8rem;
+  height: 1.6rem;
+  font-size: 1rem;
+}
+
+.task-create__folderoption {
+}
+
+.task-create__create-button {
+  width: 3rem;
+  height: 1.5rem;
+  align-self: flex-end;
+}
+
+/*Edit Date*/
+
+.overlay {
+  background-color: transparent;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+.overlay--hidden {
+  display: none;
+}
+
+.editdate {
+  position: absolute;
+  top: 1.7rem;
+  left: -9rem;
+  z-index: 2;
+
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-items: center;
+  align-items: center;
+
+  height: 7rem;
+  width: 30vw;
+  border: 1px solid black;
+  background-color: white;
+}
+
+.editdate--hidden {
+  display: none;
+}
+
+.editdate__date-label {
+  font-size: 1.5rem;
+}
+.editdate__date-input {
+}
+
+.editdate__time-label {
+  font-size: 1.5rem;
+}
+
+.editdate__time-input {
+}
+
+.edit-tags {
+  position: absolute;
+  top: 1.7rem;
+  right: 0px;
+  width: 12rem;
+  min-height: 3rem;
+  padding: 4px;
+  padding-top: 0.8rem;
+  border: 1px solid;
+  background-color: white;
+  border-radius: 6px;
+  z-index: 2;
+}
+
+.edit-tags--hidden {
+  display: none;
+}
+
+.edit-tags__taglist {
+}
+.edit-tags__tag-listitem {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  padding-left: 2rem;
+}
+
+.edit-tags__tag-listitem::before {
+  position: absolute;
+  content: "";
+  width: 1rem;
+  height: 1rem;
+  background-color: red;
+  left: 7px;
+  border-radius: 50%;
+}
+.edit-tags__tagname {
+}
+.edit-tags__tag-checkbox {
+}
+
+.edit-folder {
+  position: absolute;
+  top: 1.7rem;
+  right: -3rem;
+  width: 12rem;
+  min-height: 3rem;
+  border: 1px solid black;
+  background-color: white;
+  text-align: center;
+  padding-top: 0.5rem;
+  z-index: 2;
+}
+
+.edit-folder--hidden {
+  display: none;
+}
+
+.edit-folder__folder-selection {
+  width: 8rem;
+  height: 1.6rem;
+  font-size: 1rem;
+}
+.edit-folder__folderoption {
+}
+
+.edit-priority {
+  position: absolute;
+  height: 3rem;
+  width: 5rem;
+  top: 26px;
+  border: 1px solid black;
+  background-color: white;
+  text-align: center;
+  z-index: 2;
+  background-color: white;
+}
+
+.edit-priority--hidden {
+  display: none;
+}
+
+.edit-priority__priority-selection {
+  width: 3rem;
+  height: 1.6rem;
+  font-size: 1rem;
+}
+
+.edit-priority__priorityoption {
+}
+
+.tagoptions {
+  position: fixed;
+  left: 4rem;
+  background-color: white;
+  border: 1px solid black;
+  z-index: 2;
+  padding: 11px;
+  border-radius: 10px;
+}
+
+.tagoptions--hidden {
+  display: none;
+}
+
+.tagoptions__items {
+  margin: 8px 0;
+}
+
+.tagoptions__link {
+  text-decoration: none;
+  color: black;
+}
+
+.tagoptions__link:hover {
+  text-decoration: underline;
+  color: blue;
+}
+
+.folderoptions {
+  position: fixed;
+  left: 4rem;
+  background-color: white;
+  border: 1px solid black;
+  z-index: 2;
+  padding: 11px;
+  border-radius: 10px;
+}
+
+.folderoptions--hidden {
+  display: none;
+}
+
+.folderoptions__items {
+  margin: 8px 0;
+}
+
+.folderoptions__link {
+  text-decoration: none;
+  color: black;
+}
+
+.folderoptions__link:hover {
+  text-decoration: underline;
+  color: blue;
+}
+
+.folderlist-modal {
+  top: -13rem;
+
+  padding: 2px;
+}
+
+.folderlist-modal::backdrop {
+  background-color: transparent;
+}
+
+.folderlist {
+  width: 20rem;
+  min-height: 4rem;
+  max-height: 7rem;
+  background-color: white;
+  overflow-y: auto;
+  padding: 20px;
+  border: 1px solid black;
+}
+.folderlist__item {
+  padding: 2px;
+  margin: 3px 0;
+  border: 1px solid black;
+  font-size: 2rem;
+  text-align: center;
+}
+
+.taglist-modal {
+  top: -13rem;
+
+  padding: 2px;
+}
+
+.taglist-modal::backdrop {
+  background-color: transparent;
+}
+
+.taglist {
+  width: 20rem;
+  min-height: 4rem;
+  max-height: 7rem;
+  background-color: white;
+  overflow-y: auto;
+  padding: 20px;
+  border: 1px solid black;
+}
+.taglist__item {
+  padding: 2px;
+  margin: 3px 0;
+  border: 1px solid black;
+  font-size: 2rem;
+  text-align: center;
+}
+
+.createmodal {
+  padding: 1rem;
+}
+.createmodal__form {
+  display: flex;
+  flex-flow: column nowrap;
+
+  width: 30rem;
+}
+.createmodal__namelabel {
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+}
+.createmodal__nameinput {
+  font-size: 1.5rem;
+  padding: 2px;
+  margin-bottom: 10px;
+}
+
+.createmodal__colorlabel {
+  font-size: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+
+.createmodal__colorbox {
+  /* margin: 0 10px; */
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: auto;
+  row-gap: 1rem;
+  justify-items: center;
+  margin-bottom: 1.5rem;
+}
+.createmodal__color-item {
+  width: 4rem;
+  border-radius: 50%;
+  height: 4rem;
+  transition: border-radius 0.3s;
+}
+
+.createmodal__color-item:hover {
+  border-radius: 0;
+}
+
+.createmodal__color-item--red {
+  background-color: red;
+}
+.createmodal__color-item--yellow {
+  background-color: var(--yellow);
+}
+.createmodal__color-item--blue {
+  background-color: blue;
+}
+.createmodal__color-item--purple {
+  background-color: purple;
+}
+.createmodal__color-item--green {
+  background-color: green;
+}
+.createmodal__color-item--black {
+  background-color: black;
+}
+.createmodal__color-item--orange {
+  background-color: orange;
+}
+.createmodal__color-item--pink {
+  background-color: pink;
+}
+
+.createmodal__button {
+  align-self: flex-end;
+  width: auto;
+  font-size: 1.5rem;
+  padding: 5px 19px;
 }
