--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
   --yellow: yellow;
 }
 
+body{
+  position: relative;
+}
+
 .body-container {
   display: flex;
   flex-flow: column nowrap;
@@ -39,6 +43,11 @@
 .taskview__name {
   font-size: 3rem;
   margin-bottom: 2rem;
+}
+
+.taskview__day {
+  font-size: 2rem;
+  margin-bottom: 1rem;
 }
 
 /*Task Bar*/
@@ -169,9 +178,11 @@
   position: relative;
 }
 .taskbar__date-link {
-  color: black;
-  text-decoration: none;
-  font-size: 1.5rem;
+  font-size: 1.2rem; 
+  border: none;
+  text-align: left;
+  cursor: pointer;
+  background-color: transparent;
 }
 
 .taskbar__tagsection {
@@ -592,6 +603,20 @@
 .poppers{}
 
 /*Edit Date*/
+
+.main-overlay {
+  background-color: transparent;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+.main-overlay--hidden {
+  display: none;
+}
 
 .overlay {
   background-color: transparent;
