--- a/style.css
+++ b/style.css
@@ -120,8 +120,11 @@ body {
 }
 .taskbar__folder-link {
   color: black;
-  text-decoration: none;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
+  border: none;
+  text-align: left;
+  cursor: pointer;
+  background-color: transparent;
 }
 
 .taskbar__folder-link--red {
