--- a/style.css
+++ b/style.css
@@ -35,9 +35,10 @@ body {
   display: flex;
   align-items: center;
   flex-flow: column;
-
   flex: 1;
   padding: 10px;
+  height: 86vh;
+  overflow: auto;
 }
 
 .taskview__name {
@@ -61,12 +62,11 @@ body {
   margin-bottom: 10px;
 }
 
-
 .taskbar__content {
   position: relative;
   display: grid;
   grid-template-columns: 30px 1fr 30px;
-  grid-template-rows: 30px auto 30px;
+  grid-template-rows: auto auto 30px;
   row-gap: 5px;
   grid-template-areas:
     "checkbox top priority"
@@ -107,9 +107,15 @@ body {
   width: 70%;
 }
 .taskbar__name-link {
-  color: black;
-  text-decoration: none;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
+  border: none;
+  text-align: left;
+  cursor: pointer;
+  background-color: transparent;
+}
+
+.taskbar__name-link:hover {
+  color: blue;
 }
 
 .taskbar__folder {
@@ -158,7 +164,7 @@ body {
   grid-area: middle;
 
   padding: 0 5px;
-  /* border: 1px solid; */
+  overflow: hidden;
 }
 .taskbar__descript-link {
   color: rgba(138, 136, 136, 0.953);
@@ -273,15 +279,20 @@ body {
 .side-menu__top,
 .side-menu__middle,
 .side-menu__bottom {
-  margin: 2rem 0;
-  margin-left: 2rem;
 }
 
 .side-menu__top {
+  margin-top: 1.3rem;
 }
 
 .side-menu__middle {
   position: relative;
+}
+
+.side-menu__title {
+  font-size: 18px;
+  margin-top: 1rem;
+  margin-left: 21px;
 }
 
 .side-menu__bottom {
@@ -289,38 +300,79 @@ body {
   overflow: auto;
 }
 
-.side-menu__folder,
 .side-menu__option {
-  margin: 8px 0;
+  /* position: relative; */
+  padding: 3px 0;
+  padding-left: 4rem;
+  margin: 2px 0;
+  cursor: pointer;
 }
 
 .side-menu__folder {
-  list-style: inside disc;
+  position: relative;
+  padding: 2px 0;
+  padding-left: 4rem;
+  margin: 8px 0;
+  cursor: pointer;
 }
 
-.side-menu__folder--today::marker {
+.side-menu__folder:hover,
+.side-menu__option:hover,
+.side-menu__today:hover,
+.side-menu__inbox:hover,
+.side-menu__upcoming:hover {
+  background-color: rgba(220, 220, 220, 0.811);
+  border-radius: 15px;
+}
+
+.side-menu__topFolder {
+  position: relative;
+  padding: 3px 0;
+  padding-left: 4rem;
+  margin: 5px 0;
+  cursor: pointer;
+}
+
+.side-menu__topFolder::before {
+  position: absolute;
+  top: 4px;
+  left: 22px;
+  color: black;
+}
+
+.side-menu__today::before {
   content: "\1F4C5";
 }
 
-.side-menu__folder--inbox::marker {
+.side-menu__inbox::before {
   content: "\1F4E5";
 }
 
-.side-menu__folder--upcoming::marker {
+.side-menu__upcoming::before {
   content: "\1F5D3";
 }
 
-.side-menu__folder--home::marker {
-  color: blue;
+.side-menu__folder::before {
+  position: absolute;
+  top: 4px;
+  left: 22px;
+  content: "";
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  background-color: var(--color, black);
 }
 
-.side-menu__folder--work::marker {
-  color: yellow;
-}
+/* .side-menu__folder--yellow::before {
+  background-color: yellow;
+} */
 
 /*Task Create Modal*/
 
 .task-create {
+  border: 1px solid black;
+  width: fit-content;
+  background-color: white;
 }
 
 .task-create::backdrop {
@@ -449,6 +501,7 @@ body {
 .task-create__tag {
   font-size: 1rem;
   margin: 2px 5px;
+  padding: 1px 3px;
 }
 
 .task-create__tag--red {
@@ -560,6 +613,7 @@ body {
 
 .task-create__priority {
   font-size: 1rem;
+  margin-left: 25px;
 }
 .task-create__priority-selection {
   /* position: fixed; */
@@ -611,8 +665,8 @@ body {
 }
 
 .task-create__create-button {
-  width: 3rem;
-  height: 1.5rem;
+  height: 1.6rem;
+  padding: 2px 3px;
   align-self: flex-end;
 }
 
@@ -628,7 +682,7 @@ body {
   height: 100%;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 2;
 }
 
 .main-overlay--hidden {
@@ -803,29 +857,23 @@ body {
 }
 
 .folderoptions {
-  position: fixed;
-  left: 4rem;
   background-color: white;
-  border: 1px solid black;
-  z-index: 2;
-  padding: 11px;
+  border: 1px solid #00000047;
+  padding: 22px;
   border-radius: 10px;
+  height: 30vh;
+  box-shadow: 2px 2px 6px #0000006b;
 }
 
-.folderoptions--hidden {
-  display: none;
-}
-
-.folderoptions__items {
+.folderoptions__item {
   margin: 8px 0;
-}
-
-.folderoptions__link {
-  text-decoration: none;
   color: black;
+  cursor: pointer;
+  font-size: 2rem;
+  margin: 14px 0;
 }
 
-.folderoptions__link:hover {
+.folderoptions__item:hover {
   text-decoration: underline;
   color: blue;
 }
@@ -958,4 +1006,62 @@ body {
   width: auto;
   font-size: 1.5rem;
   padding: 5px 19px;
+}
+
+.editModal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 100%;
+  height: 100%;
+
+  background-color: rgba(0, 0, 0, 0.432);
+}
+
+.folderviewer {
+  width: 100%;
+  height: 100%;
+  padding: 4rem 7rem;
+}
+
+.folderviewer__title {
+  font-size: 2rem;
+  border-bottom: 1px solid #00000026;
+  padding-bottom: 17px;
+}
+
+.folderviewer__folder {
+  position: relative;
+  padding: 2px 0;
+  padding-left: 4rem;
+  margin: 8px 0;
+  cursor: pointer;
+  font-size: 2rem;
+}
+
+.folderviewer__folder:hover {
+  background-color: rgba(220, 220, 220, 0.811);
+  border-radius: 15px;
+}
+
+.folderviewer__folder::before {
+  position: absolute;
+  top: 9px;
+  left: 22px;
+  content: "";
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  background-color: var(--color, black);
+}
+
+.folderviewer__folderlist {
+  height: 10rem;
+  overflow: auto;
 }
