--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
+@import url("./reset.css");
+@import url("./styles2.css");
+
 :root {
-  --yellow: yellow;
+  --yellow: red;
 }
 
 body {
@@ -44,6 +47,7 @@ body {
 .taskview__name {
   font-size: 3rem;
   margin-bottom: 2rem;
+  color:black
 }
 
 .taskview__day {
@@ -311,9 +315,21 @@ body {
 .side-menu__folder {
   position: relative;
   padding: 2px 0;
-  padding-left: 4rem;
+  padding-left: 3rem;
   margin: 8px 0;
   cursor: pointer;
+  font-size: 1.3rem;
+}
+
+.side-menu__folder::before {
+  position: absolute;
+  top: 4px;
+  left: 20px;
+  content: "";
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  background-color: var(--color, black);
 }
 
 .side-menu__folder:hover,
@@ -350,17 +366,6 @@ body {
 
 .side-menu__upcoming::before {
   content: "\1F5D3";
-}
-
-.side-menu__folder::before {
-  position: absolute;
-  top: 4px;
-  left: 22px;
-  content: "";
-  width: 1rem;
-  height: 1rem;
-  border-radius: 50%;
-  background-color: var(--color, black);
 }
 
 /* .side-menu__folder--yellow::before {
@@ -685,6 +690,12 @@ body {
   z-index: 2;
 }
 
+.main-overlay--center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .main-overlay--hidden {
   display: none;
 }
@@ -933,7 +944,13 @@ body {
 }
 
 .createmodal {
-  padding: 1rem;
+  padding: 2rem;
+  border: 1px solid #00000040;
+  box-shadow: 2px 2px 4px #929292;
+  display: flex;
+  justify-content: center;
+  width: 35%;
+  background-color: white;
 }
 .createmodal__form {
   display: flex;
@@ -949,6 +966,10 @@ body {
   font-size: 1.5rem;
   padding: 2px;
   margin-bottom: 10px;
+}
+
+.createmodal__nameinput::before {
+  
 }
 
 .createmodal__colorlabel {
@@ -972,8 +993,18 @@ body {
   transition: border-radius 0.3s;
 }
 
+.createmodal__color-item--chosen {
+  border: 6px solid black;
+  border-radius: 0;
+}
+
 .createmodal__color-item:hover {
   border-radius: 0;
+}
+
+.createmodal__color-item--black.createmodal__color-item--chosen {
+  border-radius: 0;
+  border: 6px double grey;
 }
 
 .createmodal__color-item--red {
@@ -1064,4 +1095,105 @@ body {
 .folderviewer__folderlist {
   height: 10rem;
   overflow: auto;
+}
+
+.chooseList{
+  display: flex;
+  flex-flow: column nowrap;
+  border: 1px solid #929292;
+  width: fit-content;
+  padding: 1rem;
+  border-radius: 5px;
+  background-color: white;
+}
+
+.chooseList__heading{
+  font-size: 1.1rem;
+  padding-bottom: 5px;
+  border-bottom: 1px solid #929292c1;
+}
+
+.chooseList__button{
+  align-self: flex-end;
+  font-size: 1rem;
+  padding: 2px 6px;
+}
+
+.chooseList__bottom {
+  height: 12rem;
+  overflow: auto;
+  padding-bottom: 1rem;
+}
+
+.chooseList__folder {
+  position: relative;
+  padding: 2px 0;
+  padding-left: 3rem;
+  margin: 8px 0;
+  cursor: pointer;
+  font-size: 1.3rem;
+}
+
+.chooseList__folder::before {
+  position: absolute;
+  top: 4px;
+  left: 20px;
+  content: "";
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  background-color: var(--color, black);
+}
+
+.chooseList__folder:hover{
+  background-color: rgba(220, 220, 220, 0.811);
+  border-radius: 15px;
+}
+
+.chooseList__folder--chosen {
+  background-color: rgba(220, 220, 220, 0.811);
+  border-radius: 0px;
+}
+
+.chooseList__folder--chosen:hover {
+  border-radius: 0px;
+}
+.tagList {
+  height: 12rem;
+  overflow: auto;
+  padding-bottom: 1rem;
+}
+
+.tagList__item {
+  position: relative;
+  padding: 2px 0;
+  padding-left: 3rem;
+  margin: 8px 0;
+  cursor: pointer;
+  font-size: 1.3rem;
+}
+
+.tagList__item::before {
+  position: absolute;
+  top: 4px;
+  left: 20px;
+  content: "";
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  background-color: var(--color, black);
+}
+
+.tagList__item:hover{
+  background-color: rgba(220, 220, 220, 0.811);
+  border-radius: 15px;
+}
+
+.tagList__item--chosen {
+  background-color: rgba(220, 220, 220, 0.811);
+  border-radius: 0px;
+}
+
+.tagList__item--chosen:hover {
+  border-radius: 0px;
 }
