--- a/styles2.css
+++ b/styles2.css
@@ -8,12 +8,17 @@
     align-items: center;
     box-shadow: 3px 3px 8px black;
     border-radius: 4px;
+    background-color: white;
 }
 
 .confirmBox__title{
-    
+    flex: 100%;
+    font-size: 1.3rem;
+    text-align: center;
 }
 
 .confirmBox__button{
-    
+    padding: 5px 10px;
+    font-size: 1.2rem;
+    margin: 0px 50px;
 }
