--- a/styles2.css
+++ b/styles2.css
@@ -22,3 +22,28 @@
     font-size: 1.2rem;
     margin: 0px 50px;
 }
+
+/** Tag Options */
+
+.tagoptions {
+    background-color: white;
+    border: 1px solid #00000047;
+    padding: 22px;
+    border-radius: 10px;
+    /* height: 30vh; */
+    width: 30vw;
+    box-shadow: 2px 2px 6px #0000006b;
+  }
+  
+  .tagoptions__item {
+    margin: 8px 0;
+    color: black;
+    cursor: pointer;
+    font-size: 2rem;
+    margin: 14px 0;
+  }
+  
+  .tagoptions__item:hover {
+    text-decoration: underline;
+    color: blue;
+  }
