--- a/style.css
+++ b/style.css
@@ -17,13 +17,29 @@ body {
 }
 
 .header {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
   min-height: 4rem;
   background-color: aliceblue;
+  padding: 0 25px;
+}
+
+.header__searchButton{
+  font-size: 1.5rem;
+  padding: 0 4px;
+}
+
+.header__searchBar{
+  font-size: 1.2rem;
+  padding: 3px;
+  margin-right: 10px;
 }
 
 .header__create-task-button {
   padding: 3px 8px;
   font-size: 1.5rem;
+  margin-left: auto;
 }
 
 .main-container {
